# uv_streamlit

./: main.py  pyproject.toml  requirements.txt
