[project]
name = "uv-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "plotly>=6.0.1",
    "streamlit>=1.45.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['myproject*']

[tool.uv.sources]
uv-streamlit = { workspace = true }

[dependency-groups]
dev = [
    "uv-streamlit",
]
